gitops/stage00-ai-platform/minio/route-console.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
  namespace: model-storage
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: stage00-ai-platform
    app.kubernetes.io/component: object-storage
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: console
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
